# python-template

./: .gitignore  GitVersion.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: cicd.yml  release.yml
docs/: structure.md
hooks/: post_gen_project.py
makefiles/: env.Makefile  python.Makefile
scripts/js/: tag_commit.js
{{ cookiecutter.project_dir }}/: .pre-commit-config.yaml  README.md  pre-commit.yaml  pyproject.toml
{{ cookiecutter.project_dir }}/.github/workflows/: _build.yml  cicd.yml
{{ cookiecutter.project_dir }}/makefiles/: env.Makefile  python.Makefile
{{ cookiecutter.project_dir }}/tests/unit/: test_dummy.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.project_name }}/: dummy.py
{{ cookiecutter.project_slug }}/: Makefile  README.md
{{ cookiecutter.project_slug }}/.github/workflows/call/: build.yml
{{ cookiecutter.project_slug }}/makefiles/: python.Makefile
